Disable block pass for large functions

This is the last fix for bug #74250.